infra/k8s/cli.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scarabeo-cli
  namespace: scarabeo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cli
  template:
    metadata:
      labels:
        app: cli
    spec:
      containers:
        - name: cli
          image: scarabeo/cli:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
